content/docs/v1.21.1/openapi/import-export-openapi-format.md
---
title: Import/export in OpenAPI format
meta:
  title: Import/export in OpenAPI format
  description: Learn how to easily import and export or share with your team your mock API servers and routes using the OpenAPI specification
order: 1050
---

# Import/export in OpenAPI format

---

Mockoon supports imports in both OpenAPI v2 (Swagger) and v3 formats. Environments can be exported to OpenAPI version 3.

### Import environment from an OpenAPI v2 or v3 JSON/YAML file

To import an environment from a file, open the **Import/export** menu, select **Swagger/OpenAPI** and then **Import Swagger v2/OpenAPI v3 (JSON or YAML)**:

![Click on Import Swagger v2/OpenAPI v3 (JSON or YAML){812x267}](/images/docs/shared/import-openapi.png)

### Export an environment to an OpenAPI v3 JSON file

To export an environment to a JSON file, open the **Import/export** menu, select **Swagger/OpenAPI** and then **Export current environment to OpenAPI v3 (JSON)**:

![Click on Export current environment to OpenAPI v3 (JSON){812x267}](/images/docs/shared/export-openapi.png)

### Compatibility

Compatibility between the OpenAPI specification and Mockoon's features is only partial and detailed in the [next article](docs:openapi/openapi-specification-compatibility).
